新增初始化接口
